# musicle

./: .env  README.md  app.py  pyproject.toml  queries.py
core/: config.py  db.py
