[tool.poetry]
name = "musicle"
version = "0.1.0"
description = ""
authors = ["Sejalparate <sejbp3003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.40.2"
pandas = "^2.2.3"
mysql-connector-python = "^9.1.0"
youtube-search-python = "^1.6.6"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
